<resources>
    <string name="app_name">SwapWare</string>
</resources>